# kiara_plugin.sample_plugin

./: .cruft.json  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml  test-macos.yaml  test-windows.yaml
ci/conda/: conda-pkg-patch.yaml
docs/: .prettierignore  README.md  astro.config.mjs  development.md  index.md  package-lock.json  package.json  tsconfig.json
docs/src/components/: ConcreteModuleConfig.svelte  SummariseItemsOfType.astro
docs/src/content/: config.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/PLUGIN_NAME/: getting-started.md
docs/src/content/docs/PLUGIN_NAME/core_types/: index.mdx
docs/src/content/docs/concepts/: architecture.mdoc
docs/src/content/docs/guides/: development.md  example.md
docs/src/content/plugin_data/: kiara_plugin.sample_plugin-v0.1.0.json  kiara_plugin.sample_plugin-v0.1.10.json  kiara_plugin.sample_plugin-v0.1.11.json  kiara_plugin.sample_plugin-v0.1.5.json  kiara_plugin.sample_plugin-v0.1.6.json  kiara_plugin.sample_plugin-v0.1.7.json  kiara_plugin.sample_plugin-v0.1.8.json  kiara_plugin.sample_plugin-v0.1.9.json  kiara_plugin.sample_plugin-v0.2.0.json  kiara_plugin.sample_plugin-v0.2.1.json  kiara_plugin.sample_plugin-v0.2.3.json  kiara_plugin.sample_plugin-v0.2.4.json  kiara_plugin.sample_plugin-v0.2.5.json  kiara_plugin.sample_plugin-v0.2.6.json  kiara_plugin.sample_plugin-v0.2.7.json  kiara_plugin.tabular-v0.5.0.json
docs/src/lib/: util.ts
docs/src/pages/: changelog.astro
docs/src/pages/[version]/: index.astro
docs/src/pages/[version]/datatypes/: [datatype].astro  index.astro
docs/src/pages/[version]/modeltypes/: [modeltype].astro  index.astro
docs/src/pages/[version]/modules/: [module].astro  index.astro
docs/src/pages/[version]/operations/: [operation].astro  index.astro
docs/src/pages/[version]/operationtypes/: index.astro
docs/src/styles/: custom.css
examples/jobs/: example_job_sample_plugin.yaml
examples/pipelines/: example_pipeline_sample_plugin.yaml
scripts/documentation/: gen_info_pages.py  gen_module_doc.py
src/kiara_plugin/sample_plugin/: __init__.py  data_types.py  models.py
src/kiara_plugin/sample_plugin/modules/: __init__.py
tests/: conftest.py  test_kiara_modules_default.py
